@@ -61,33 +61,30 @@ public class DiscussionService {
     /**
      * 페이징된 토론 목록 반환 (책 정보 포함)
      */
-    public PageInfoDTO<DiscussionDTO> getDiscussionsWithBookInfo(PageInfoDTO<DiscussionDTO> pageInfo) {
-        // 기본 페이지 설정
+    public List<DiscussionDTO> getDiscussionsWithBookInfo(PageInfoDTO<DiscussionDTO> pageInfo) {
         if (pageInfo.getPage() < 1) {
             pageInfo.setPage(1);
         }
         if (pageInfo.getSize() == null || pageInfo.getSize() <= 0) {
             pageInfo.setSize(5); // 기본 5개씩 노출
         }
-
-        // 총 토론 개수 조회
         Integer totalDiscussionCount = discussionMapper.selectPaginatedDiscussionsTotalCount(pageInfo);
-
-        // 데이터가 존재할 경우 페이징 처리
         if (totalDiscussionCount != null && totalDiscussionCount > 0) {
             List<DiscussionDTO> discussions = discussionMapper.getDiscussions(pageInfo);
             pageInfo.setTotalElementCount(totalDiscussionCount);
             pageInfo.setElements(discussions);
-
-            // 각 토론 게시글의 최근 댓글 가져오기
             for (DiscussionDTO discussion : discussions) {
                 String recentComment = discussionMapper.getRecentCommentByDiscussionId(discussion.getId());
                 discussion.setRecentComment(recentComment);
             }
+            return discussions;
+        } else {
+            pageInfo.setTotalElementCount(0);
+            pageInfo.setElements(Collections.emptyList());
+            return Collections.emptyList();
         }
-
-        return pageInfo;
     }
+
 
     /**
      * isbn 으로 토론 조회
@@ -100,7 +97,7 @@ public class DiscussionService {
     /**
      * 책 제목으로 토론 검색
      */
-    public PageInfoDTO<DiscussionDTO> getDiscussionByBookTitle(PageInfoDTO<DiscussionDTO> pageInfo, String title) {
+    public List<DiscussionDTO> getDiscussionByBookTitle(PageInfoDTO<DiscussionDTO> pageInfo, String title) {
         // 기본 페이지 설정
         if (pageInfo.getPage() < 1) {
             pageInfo.setPage(1);
@@ -117,13 +114,14 @@ public class DiscussionService {
         if (pageInfo.getTotalElementCount() > 0) {
             List<DiscussionDTO> discussions = discussionMapper.getDiscussionByBookTitle(pageInfo, title);
             pageInfo.setElements(discussions);
+            return discussions;
         } else {
             // 데이터가 없으면 빈 리스트 설정
-            pageInfo.setElements(List.of());
+            pageInfo.setElements(Collections.emptyList());
+            return Collections.emptyList();
         }
-
-        return pageInfo;
     }
+
 
 
     /**
@@ -151,5 +149,9 @@ public class DiscussionService {
      */
     public DiscussionDTO selectDiscussionByDiscussionId(Integer discussionId) {
         return discussionMapper.selectDiscussionByDiscussionId(discussionId);
+    }
+
+    public Integer getTotalCountByTitle(String title) {
+        return discussionMapper.getTotalCountByTitle(title);
     }
 }
